<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   android:orientation="vertical"
    tools:context="com.example.gulshan.newsappex2.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="40dp">
        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="0.1"
            style="?android:attr/borderlessButtonStyle"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:id="@+id/btnaboutback"
            android:src="@drawable/ic_arrow_back"/>
        <TextView
            android:layout_width="0dp"
            android:text="@string/setting_set"
            android:layout_weight="0.8"
            android:gravity="center"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="20dp"></LinearLayout>

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#cdcdcd"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"

        android:layout_height="40dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:textSize="15sp"
            android:padding="10dp"
            android:text="@string/three_noti"
            android:gravity="center_vertical"
            android:layout_height="match_parent" />
        <Switch
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:id="@+id/swithbtnsetnoti"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cdcdcd"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="40dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:text="@string/set_qr"
            android:gravity="center_vertical"
            android:layout_height="match_parent" />
        <Switch
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="match_parent"
            android:id="@+id/swithbtnsetread"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cdcdcd"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="40dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:id="@+id/btnsetupdate"
                style="?android:attr/borderlessButtonStyle"
                android:padding="10dp"
                android:typeface="serif"
                android:text="@string/set_up"/>

        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cdcdcd"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="40dp">


            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:id="@+id/btnhelpset"
                style="?android:attr/borderlessButtonStyle"
                android:padding="10dp"
                android:typeface="serif"
                android:text="@string/ss_help"/>

        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#cdcdcd"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="40dp">


            <Button
                android:id="@+id/btnaboutset"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="238dp"
                android:gravity="left"
                android:padding="10dp"
                android:text="@string/set_about"
                android:typeface="serif" />

        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#cdcdcd"/>


    </LinearLayout>


</LinearLayout>
