<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Rml"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.gulshan.newsappex2.MainActivity">

    <ScrollView
        android:id="@+id/sview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomBar">

        <LinearLayout
            android:id="@+id/llMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llGoogleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    >
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/civImage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/newslogo"
                        android:layout_centerHorizontal="true"
                        android:visibility="gone"
                        />
                    <TextView
                        android:id="@+id/tvGoogleName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:layout_below="@+id/civImage"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:visibility="gone"
                         />

                    <TextView
                        android:id="@+id/tvEmailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="name@gmail.com"
                        android:layout_below="@+id/tvGoogleName"
                        android:textSize="15sp"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:visibility="gone"
                         />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/rlSignInLayout"
                android:orientation="horizontal"
               android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebookLogin"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.5"
                    android:layout_marginRight="15dp"
                   />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/googleSignIn"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="40dp"
                    android:layout_toRightOf="@+id/facebookLogin"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <Button

                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:drawableTop="@drawable/noti"
                        android:padding="5dp"
                        android:text="@string/three_noti"
                        android:textSize="10sp"
                        android:typeface="serif" />

                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:id="@+id/at_bookmark"
                        android:drawableTop="@drawable/ic_book"
                        android:padding="5dp"
                        android:text="@string/three_book"
                        android:textSize="11sp"
                        android:typeface="serif" />



                    <Button
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.33"
                        android:drawableTop="@drawable/ic_down"
                        android:padding="5dp"
                        android:text="@string/three_down"
                        android:textSize="11sp"
                        android:typeface="serif" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#cdcdcd" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.6"
                        android:padding="10dp"
                        android:text="@string/three_lang"
                        android:textSize="15dp"
                        android:typeface="serif" />

                    <Spinner
                        android:id="@+id/langspin"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:entries="@array/language"
                        android:typeface="serif"></Spinner>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#cdcdcd" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:orientation="vertical"
                    android:scrollbars="vertical">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#cdcdcd" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnfeed"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/three_feed"
                            android:typeface="serif" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#cdcdcd" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvNightMode"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.5"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/three_nightMode"
                            android:typeface="serif" />

                        <android.support.v7.widget.SwitchCompat
                            android:id="@+id/scNightMode"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="0.1" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#cdcdcd" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <Button
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/three_followfb"
                            android:typeface="serif" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#cdcdcd" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnsetting"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="left"
                            android:padding="10dp"
                            android:text="@string/three_set"
                            android:typeface="serif" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#cdcdcd" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="end">

        <android.support.design.widget.BottomNavigationView
            android:id="@+id/bottomNavView_Bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:menu="@menu/bottom_navigation_menu"></android.support.design.widget.BottomNavigationView>
    </RelativeLayout>
</RelativeLayout>
